--- a/Reflection/App.config
+++ b/Reflection/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+<appSettings >
+  <add key="IDBHelper" value ="DB.Mysql.DB.Helper,DB.Mysql"/>
+</appSettings>
 </configuration>
